force-app/main/default/objects/SetupTest__c/SetupTest__c.object-meta.xml
<CustomObject>
    <label>SetupTest</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SetupTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SetupTest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>