force-app/main/default/objects/SetupTest__c/fields/qsw__c.field-meta.xml
<CustomField>
    <fullName>qsw__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>qsw</label>
    <type>AutoNumber</type>
</CustomField>