force-app/main/default/objects/SetupTest__c/fields/Test123__c.field-meta.xml
<CustomField>
    <fullName>Test123__c</fullName>
    <description>cdscc</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>dcdscdsc</inlineHelpText>
    <label>Test123</label>
    <length>200</length>
    <type>Text</type>
</CustomField>