force-app/main/default/objects/SetupTest__c/fields/TstFor__c.field-meta.xml
<CustomField>
    <fullName>TstFor__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>axsacsdscd</inlineHelpText>
    <label>TstFor</label>
    <type>Date</type>
</CustomField>