force-app/main/default/objects/SetupTest__c/listViews/Test_Audit.listView-meta.xml
<ListView>
    <fullName>Test_Audit</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Test_Audit</label>
    <language>en_US</language>
    <sharedTo>
        <group>NEWTESTGROUP</group>
    </sharedTo>
</ListView>